--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
         <section class="cards" id="services">
             <h2 class="title">خدمات</h2>
             <div class="content">
-                <div class="card">
+                <a class="card" href="firstaid.html">
                     <div class="icon">
                         <i class="fa-solid fa-briefcase-medical"></i>
                     </div>
@@ -35,9 +35,9 @@
                         <h3>الاسعافات الاوليه</h3>
                         <p>اسعاف الاصابات الناتجه عن المعسكرات</p>
                     </div>
-                </div>
+                </a>
     
-                <div class="card">
+                <a class="card" href="rabatat.html">
                     <div class="icon">
                         <i class="fa-solid fa-circle-nodes"></i>
                     </div>
@@ -45,9 +45,9 @@
                         <h3>عقد و ربطات</h3>
                         <p>العقد و الربطات اللازمه لمشاريع الرياده</p>
                     </div>
-                </div>
+                </a>
     
-                <div class="card">
+                <a class="card" href="niran.html">
                     <div class="icon">
                         <i class="fa-solid fa-fire-flame-curved"></i>
                     </div>
@@ -55,7 +55,7 @@
                         <h3>النيران</h3>
                         <p>نيران المعسكرات و الطهي الخلوي</p>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
     </body>
