--- a/website/main.html
+++ b/website/main.html
@@ -33,7 +33,6 @@
                     </div>
                     <div class="info">
                         <h3>الاسعافات الاوليه</h3>
-                        <p>اسعاف الاصابات الناتجه عن المعسكرات</p>
                     </div>
                 </a>
     
@@ -43,7 +42,6 @@
                     </div>
                     <div class="info">
                         <h3>عقد و ربطات</h3>
-                        <p>العقد و الربطات اللازمه لمشاريع الرياده</p>
                     </div>
                 </a>
     
@@ -53,10 +51,44 @@
                     </div>
                     <div class="info">
                         <h3>النيران</h3>
-                        <p>نيران المعسكرات و الطهي الخلوي</p>
+                    </div>
+                </a>
+                <a class="card" href="camping.html">
+                    <div class="icon">
+                        <i class="fa-solid fa-tents"></i>
+                    </div>
+                    <div class="info">
+                        <h3>التخييم و كيفيه تحضير المعسكر</h3>
+                    </div>
+                </a>
+                <a class="card" href="kozmo.html">
+                    <div class="icon">
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="info">
+                        <h3>كزمغرافي</h3>
+                    </div>
+                </a>
+                <a class="card" href="chemise.html">
+                    <div class="icon">
+                        <i class="fa-solid fa-shirt"></i>
+                    </div>
+                    <div class="info">
+                        <h3>الزي الكشفي</h3>
+                    </div>
+                </a>
+                <a class="card" href="cook.html">
+                    <div class="icon">
+                        <i class="fa-solid fa-bowl-rice"></i>
+                    </div>
+                    <div class="info">
+                        <h3>الطهي الخلوي </h3>
                     </div>
                 </a>
             </div>
         </section>
+        <footer class="footer">
+            <p class="footer-title">Copyrights @<span>LOTW</span></p>
+        </footer>
     </body>
 </html>
