image plus started first aid

--- a/website/firstaid.html
+++ b/website/firstaid.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,9 +8,39 @@
         <link rel="stylesheet" href="style.css">
         <title>First Aid</title>
 	</head>
-	<body>
+	<body style="text-align: right;">
         <header>    
             <a href="home.html" class="logo">كشافه نور العالم</a>
         </header>
+		<section>
+			<h2> الاسعافات الاوليه</h2>
+			<p>
+				الإسعافات الأوَّلية عناية طبية فورية ومؤقتة؛ تقدم لإنسان مصاب أو مريض. بغرض محاولة الوصول به إلى أفضل وضع صحي ممكن بأدوات أو مهارات علاجية بسيطة إلى وقت وصول المساعدة الطبية الكاملة. وهي في العادة عبارة عن مجموعة خطوات طبية بسيطة ولكنها في العادة تؤدي إلى إنقاذ حياة المصاب، الشخص الذي يقوم بعملية 
+الإسعاف الأولي (المُسعِف) ليس بحاجة إلى مهارات أو تقنيات طبية عالية، حيث يكفيه التدرب على مهارات القيام بالإسعاف من خلال استعمال الحد الأدنى من المعدات.
+
+			</p>
+			<br><br>
+			<h2>اهداف الاسعافات الاوليه </h2>
+			<p>
+				ا الهدف الأساسي للإسعافات الأولية هو منع الوفاة أو التدهور والإصابة الخطيرة. يمكن تلخيص الأهداف الرئيسية للإسعافات الأولية في ثلاث نقاط أساسية هي
+				<div>
+					<span>المحافظه علي الحياة-</span><br>
+					<span> وقف حدوث الأذى أو الضرر، و منع الاصابة/الحالة من ان تصبح اسوء، كإبعاد المريض عن مصدر الأذى أو مكان الحادث والضغط على الجروح لإيقاف النزف- </span><br>
+					<span>تعزيز الشفاء من خلال توفير العلاج الأولي للإصابه-</span><br>
+				</div>
+			</p>
+			<br><br>
+			<h2>مبادئ الإسعاف الأولي</h2>
+
+				<div>
+					<span>تقييم سريع للمخاطر لتأمين حياة المصاب والحفاظ على حياته-</span><br>
+					<span> ان يحمي المسعف نفسه-</span><br>
+					<span>عدم تحريك المصاب لمنع تفاقم وتدهور حالته الا اذا كان تحريكه ضروريا-</span><br>
+					<span>  طلب المساعدة الطبية للحصول على خدمات الطوارئ بأسرع وقت ممكن والاتصال بالنقل الإسعافي علي رقم 123-</span><br>
+					<span> على المسعفون أن يحافظوا على هدوئهم ويساعدوا في تقليل مستويات التوتر للشخص المصاب وتقديم الطمأنينة والدعم اللازمين-</span><br>
+					<span>  يجب  التعرف علي التاريخ المرضى او الامراض المزمنة لكل فرد في المجموعة-</span><br>
+				</div>
+			
+		</section>
     </body>
 </html>
