--- a/website/home.html
+++ b/website/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,9 +19,10 @@
     
         <section class="main">
             <div>
-                <h2> <br> <span>دليل الكشاف</span> </h2>
+                <h2> <br><br><br><br><br><br><br><br><br><br><br>
+                    <br><br><br><br><br><br><br> <span>دليل الكشاف</span> </h2>
                 <h4>فَلْيُضِئْ نُورُكُمْ هكَذَا قُدَّامَ النَّاسِ، لِكَيْ يَرَوْا أَعْمَالَكُمُ الْحَسَنَةَ وَيُمَجِّدُوا أَبَاكُمُ الَّذِي فِي السَّمَاوَاتِ.
-                    إنجيل متى</h4>
+                    </h4>
             </div>
         </section>
         <section class="cards" id="services">
